--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <div class="jumbotron">
             <h1>Ingrese Producto</h1>
             <br>
-+
+
             <form id="formAgregarProducto">
                 <!-- Campo nombre del producto -->
                 <div class="form-group">
@@ -57,7 +57,7 @@
 
             <div id="mensajes"></div>
 
-            <form onsubmit="return addMessage(this)" id="formPublicarMensaje" class="form-inline" autocomplete="off">
+            <form  id="formPublicarMensaje" class="form-inline" autocomplete="off">
                 <div class="form-group">
                     <input disabled id="inputMensaje" type="text" class="form-control my-2 mr-2"
                         placeholder="Ingresá un mensaje...">
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <<script src="/main.js"></script>
+    <<script src="/js/main.js"></script>
 
 </body>
 
